--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "ThirdTest",
+  "name": "third-test",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "14.15.1",
+    "npm": "6.14.8"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
